will need to practice javadoc a bit more, but for now its an okay example

--- a/mini-project-1/Makefile
+++ b/mini-project-1/Makefile
@@ -1,9 +1,10 @@
-JAVAC= javac
-
 SRCS= $(wildcard *.java)
 OBJS= $(SRCS:.java=.class) 
 
 all: $(OBJS)
+
+doc:
+	javadoc -d doc $(SRCS)
 
 clean:
 	rm -f *.class *~
@@ -11,4 +12,4 @@ clean:
 .SUFFIXES: .java .class
 
 .java.class:
-	$(JAVAC) $<
+	$(javac) $<
