Big cleanup, documented most things, and added a little gnuplot script generation method to LogBook. Starting to look definitely usable.

--- a/mini-project-1/Makefile
+++ b/mini-project-1/Makefile
@@ -3,7 +3,7 @@ OBJS= $(SRCS:.java=.class)
 
 all: $(OBJS)
 
-doc:
+doc: $(SRCS)
 	javadoc -d doc $(SRCS)
 
 clean:
@@ -12,4 +12,4 @@ clean:
 .SUFFIXES: .java .class
 
 .java.class:
-	$(javac) $<
+	javac $<
