Use Java package statements to more properly distinguish solution from exercise. Not convinced yet that this is the optimal way.

--- a/exercise2/solution/Makefile
+++ b/exercise2/solution/Makefile
@@ -2,7 +2,7 @@ SRCS= $(wildcard *.java)
 OBJS= $(SRCS:.java=.class) 
 
 JC= javac
-JCFLAGS= -classpath ..
+JCFLAGS= -classpath ../..
 
 all: $(OBJS)
 
