Put project1 into a separate package, too. But now I cannot just run e.g. SequenceComplexity from within the project1 dir. Instead, I have to go to the project root and say "java project1.SequenceComplexity". That's pretty braindead, I'm sure java has some better way of handling this, would seem to be a common usecase. Anyway.

--- a/project1/Makefile
+++ b/project1/Makefile
@@ -1,7 +1,14 @@
 SRCS= $(wildcard *.java)
 OBJS= $(SRCS:.java=.class) 
 
+JC= javac
+JCFLAGS= -classpath .:..
+
 all: $(OBJS)
+
+re: clean
+	touch $(SRCS)
+	$(MAKE) all
 
 doc: $(SRCS)
 	javadoc -d doc $(SRCS)
@@ -12,4 +19,4 @@ clean:
 .SUFFIXES: .java .class
 
 .java.class:
-	javac $<
+	$(JC) $(JCFLAGS) $<
