Nah, the package idea does not pan out. So we will just have to deal with multiple copies of the same file a bit everywhere. It seems more important to keep each exercise and project self-contained.

--- a/exercise2/solution/Makefile
+++ b/exercise2/solution/Makefile
@@ -2,9 +2,13 @@ SRCS= $(wildcard *.java)
 OBJS= $(SRCS:.java=.class) 
 
 JC= javac
-JCFLAGS= -classpath ../..
+JCFLAGS=
 
 all: $(OBJS)
+
+re: clean
+	touch $(SRCS)
+	$(MAKE) all
 
 doc: $(SRCS)
 	javadoc -d doc $(SRCS)
