final version (only tweaked the makefile)

--- a/exam/Makefile
+++ b/exam/Makefile
@@ -4,6 +4,9 @@ OBJS= $(SRCS:.java=.class)
 TEX_SRCS= $(wildcard *.tex)
 PDFS= $(TEX_SRCS:.tex=.pdf) 
 
+DOT_SRCS= $(wildcard *.dot)
+DOT_PDFS= $(DOT_SRCS:.dot=.pdf)
+
 JC= javac
 JCFLAGS=
 
@@ -24,12 +27,15 @@ doc: $(SRCS)
 clean:
 	rm -f *.class *~ *.log *.aux *.bbl *.blg $(PDFS)
 
-.SUFFIXES: .java .class .tex .pdf
+.SUFFIXES: .java .class .tex .pdf .dot
 
 .java.class:
 	$(JC) $(JCFLAGS) $<
 
-.tex.pdf:
+.tex.pdf: $(DOT_PDFS)
 	$(RUBBER) -d $<
+
+.dot.pdf:
+	dot -Tpdf -o $@ $<
 
 itads-exam.pdf: $(SRCS) $(wildcard fig/*.dot)
