stuff accumulated for lecture 1

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -5,7 +5,7 @@ PROGRAMS = $(shell ls *.c | sed 's:\.c$$::')
 all:
 	for prg in $(PROGRAMS); \
 	do \
-	  $(MAKE) recurse PRG=$$prg; \
+	  $(MAKE) recurse PRG=$$prg || exit 42; \
 	done
 
 recurse: $(PRG).c Makefile
