--- a/ex1/.gitignore
+++ b/ex1/.gitignore
@@ -3,3 +3,11 @@ hello-world
 builtin-types
 pointers-arrays-strings
 bubble-sort
+any-base
+args-bubble-sort
+divisor-histogram
+nested-loops
+prime
+printargs
+stream-bubble-sort
+type-conversion
