start work on ex4

--- a/ex3/.gitignore
+++ b/ex3/.gitignore
@@ -1,10 +1,7 @@
 *.dSYM
-cfuncs
-functions
-structs
-olympics
-hello-again
-list
+interval
+interval-solution
 vector
 vector-solution
+stack
 stack-solution
