--- a/ex4/.gitignore
+++ b/ex4/.gitignore
@@ -5,3 +5,8 @@ list-solution2
 pointer-casts-explicit
 pointer-casts-implicit
 function-pointers-solution
+generic-list
+generic-list-solution
+person-list
+person-list-solution
+person-stack-solution
