OK now it is all in one file and should really be simple enough

--- a/ex4/.gitignore
+++ b/ex4/.gitignore
@@ -13,3 +13,5 @@ person-stack-solution
 pointer-to-pointer
 simple-int-list-solution
 simple-int-stack-solution
+simple-int-list-and-stack
+simple-int-list-and-stack-solution
