--- a/ex6/Makefile
+++ b/ex6/Makefile
@@ -1,6 +1,8 @@
 CC       = gcc
 CFLAGS   = -Wall -O0 -g -pipe
-PROGRAMS = $(shell ls *.c | sed 's:\.c$$::')
+HEADERS  = $(shell ls *.h)
+OBJECTS  = $(shell ls *.c | grep -v -e '^main-' -e '^test-' | sed 's:\.c$$:.o:')
+PROGRAMS = $(shell ls main-*.c test-*.c | sed 's:\.c$$::')
 
 all:
 	for prg in $(PROGRAMS); \
@@ -8,8 +10,8 @@ all:
 	  $(MAKE) recurse PRG=$$prg || exit 42; \
 	done
 
-recurse: $(PRG).c Makefile
-	$(CC) $(CFLAGS) -o $(PRG) $(PRG).c
+recurse: $(PRG).c Makefile $(HEADERS) $(OBJECTS)
+	$(CC) $(CFLAGS) -o $(PRG) $(PRG).c $(OBJECTS)
 
 clean:
 	rm -fr *~ *.o *.dSYM $(PROGRAMS)
