--- a/ex6/Makefile
+++ b/ex6/Makefile
@@ -1,8 +1,6 @@
 CC       = gcc
 CFLAGS   = -Wall -O0 -g -pipe
-HEADERS  = $(shell ls *.h)
-OBJECTS  = $(shell ls *.c | grep -v -e '^main' -e '^test' | sed 's:\.c$$:.o:')
-PROGRAMS = $(shell ls main*.c test*.c | sed 's:\.c$$::')
+PROGRAMS = $(shell ls *.c | sed 's:\.c$$::')
 
 all:
 	for prg in $(PROGRAMS); \
@@ -10,8 +8,8 @@ all:
 	  $(MAKE) recurse PRG=$$prg || exit 42; \
 	done
 
-recurse: $(PRG).c Makefile $(HEADERS) $(OBJECTS)
-	$(CC) $(CFLAGS) -o $(PRG) $(PRG).c $(OBJECTS)
+recurse: $(PRG).c Makefile
+	$(CC) $(CFLAGS) -o $(PRG) $(PRG).c
 
 clean:
-	rm -fr *~ *.o *.dSYM $(PROGRAMS) *.dot
+	rm -fr *~ *.o *.dSYM $(PROGRAMS)
