functional starting point for the students, but should turn it into something more like a full solution, too

--- a/ex5/.gitignore
+++ b/ex5/.gitignore
@@ -2,3 +2,9 @@ bstree
 simple-int-bstree
 simple-int-heap
 int-priority-queues
+bstree-solution
+cstree-solution
+cstree
+factorial
+factorial-solution
+recursion
