what if y is a vowel, too?

--- a/pr2-sol/.gitignore
+++ b/pr2-sol/.gitignore
@@ -1,1 +1,6 @@
 main-sequence-align
+test-argument-parsing
+test-backpointer-example
+test-matrix-example1
+test-matrix-example2
+test-propagation-example
