added proper checking program

--- a/pr1/Makefile
+++ b/pr1/Makefile
@@ -1,7 +1,10 @@
-all: insertion-sort-benchmark merge-sort-benchmark
+all: insertion-sort-benchmark merge-sort-benchmark check-merge-sort
 
 insertion-sort-benchmark: insertion-sort-benchmark.c Makefile
 	gcc -Wall -o insertion-sort-benchmark insertion-sort-benchmark.c
 
 merge-sort-benchmark: merge-sort-benchmark.c Makefile
 	gcc -Wall -o merge-sort-benchmark merge-sort-benchmark.c
+
+check-merge-sort: check-merge-sort.c Makefile
+	gcc -Wall -o check-merge-sort check-merge-sort.c
