better as a separate {h,c} module

--- a/pr1/Makefile
+++ b/pr1/Makefile
@@ -1,10 +1,15 @@
+CC = gcc
+CFLAGS = -Wall
+
 all: insertion-sort-benchmark merge-sort-benchmark check-merge-sort
 
 insertion-sort-benchmark: insertion-sort-benchmark.c Makefile
-	gcc -Wall -o insertion-sort-benchmark insertion-sort-benchmark.c
+	$(CC) $(CFLAGS) -o insertion-sort-benchmark insertion-sort-benchmark.c
 
 merge-sort-benchmark: merge-sort-benchmark.c Makefile
-	gcc -Wall -o merge-sort-benchmark merge-sort-benchmark.c
+	$(CC) $(CFLAGS) -o merge-sort-benchmark merge-sort-benchmark.c
 
-check-merge-sort: check-merge-sort.c Makefile
-	gcc -Wall -o check-merge-sort check-merge-sort.c
+check-merge-sort: check-merge-sort.c test-sorting-algo.o test-sorting-algo.h Makefile
+	$(CC) $(CFLAGS) -o check-merge-sort check-merge-sort.c test-sorting-algo.o
+
+test-sorting-algo.o: test-sorting-algo.c test-sorting-algo.h
